Added multiple markers and animation

--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@ API Course, Lesson 1 -->
 <!DOCTYPE>
 <html>
  <head>
+  <title>Google Maps</title>
  <!-- styles put here, but you can include a CSS file and reference it instead! -->
    <link rel="stylesheet" type="text/css" href="main.css">
  </head>
  <body>
+   <button id="show-monuments">Show Monuments</button>
+   <button id="hide-monuments">Hide Monuments</button>
    <div id="map"></div>
 
 
