Added some geocoding functionality

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ API Course, Lesson 1 -->
        <button id="show-monuments">Show Monuments</button>
       <button id="hide-monuments">Hide Monuments</button>
       <hr>
-      <span class="text"> Draw a shape to search within it for homes!</span>
+      <span class="text"> Draw a shape to search within it for monuments!</span>
       <input id="toggle-drawing"  type="button" value="Drawing Tools">
      </div>
    </div>
